--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,37 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
+    implementation 'androidx.core:core-ktx:1.5.0-alpha02'
+
+    // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Google
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.startup:startup-runtime:1.0.0-alpha03"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
+    implementation "com.google.android.material:material:1.3.0-alpha02"
+
+    // Date and Time
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+
+    // Koin
+    implementation "org.koin:koin-core:2.0.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
+
+    // SharedPrefsData
+    implementation 'com.chibatching.kotpref:kotpref:2.11.0'
+    implementation 'com.chibatching.kotpref:gson-support:2.10.0'
+
+    // Logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Data Binding
+    implementation 'androidx.databinding:databinding-common:4.0.1'
+    implementation 'androidx.databinding:databinding-adapters:4.0.1'
+
 
 }
