--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "net.onefivefour.android.beepme"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -35,39 +35,39 @@ android {
 
 dependencies {
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
-    implementation 'androidx.core:core-ktx:1.5.0-alpha02'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30"
+    implementation 'androidx.core:core-ktx:1.7.0-alpha02'
 
     // Work Manager
-    implementation "androidx.work:work-runtime-ktx:2.4.0"
+    implementation "androidx.work:work-runtime-ktx:2.6.0"
 
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     // Google
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.startup:startup-runtime:1.0.0-alpha03"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    implementation "com.google.android.material:material:1.3.0-alpha02"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "androidx.startup:startup-runtime:1.1.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "com.google.android.material:material:1.5.0-alpha03"
 
     // Date and Time
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 
     // Koin
     implementation "org.koin:koin-core:2.0.1"
     implementation "org.koin:koin-androidx-viewmodel:2.0.1"
 
     // SharedPrefsData
-    implementation 'com.chibatching.kotpref:kotpref:2.11.0'
-    implementation 'com.chibatching.kotpref:gson-support:2.10.0'
+    implementation 'com.chibatching.kotpref:kotpref:2.13.1'
+    implementation 'com.chibatching.kotpref:gson-support:2.13.1'
 
     // Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Data Binding
-    implementation 'androidx.databinding:databinding-common:4.0.1'
-    implementation 'androidx.databinding:databinding-adapters:4.0.1'
+    implementation 'androidx.databinding:databinding-common:7.0.2'
+    implementation 'androidx.databinding:databinding-adapters:7.0.2'
 
 
 }
