--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 31
@@ -8,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "net.onefivefour.android.beepme"
-        minSdkVersion 16
+        minSdkVersion 23
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -30,6 +29,10 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 }
 
@@ -54,10 +57,6 @@ dependencies {
     // Date and Time
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 
-    // Koin
-    implementation "org.koin:koin-core:2.0.1"
-    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
-
     // SharedPrefsData
     implementation 'com.chibatching.kotpref:kotpref:2.13.1'
     implementation 'com.chibatching.kotpref:gson-support:2.13.1'
@@ -66,8 +65,8 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Data Binding
-    implementation 'androidx.databinding:databinding-common:7.0.2'
-    implementation 'androidx.databinding:databinding-adapters:7.0.2'
+    implementation 'androidx.databinding:databinding-common:7.1.0-alpha11'
+    implementation 'androidx.databinding:databinding-adapters:7.1.0-alpha11'
 
 
 }
